finished measurement uncertainty

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -52,6 +52,7 @@
 \newacronym{rgr}{RGR}{Rio Grande Rift}
 \newacronym{roc}{ROC}{Receiver Operating Characteristic}
 \newacronym{shap}{SHAP}{Shapley Additive Explanation}
+\newacronym{sigt}{SiGT}{Silica Geothermometer Temperature}
 \newacronym{tn}{TN}{True Negative}
 \newacronym{tp}{TP}{True Positive}
 \newacronym{tpr}{TPR}{True Positive Rate}
