--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,31 @@
 
+@incollection{efron_bootstrap_1992,
+	address = {New York, NY},
+	series = {Springer {Series} in {Statistics}},
+	title = {Bootstrap {Methods}: {Another} {Look} at the {Jackknife}},
+	isbn = {978-1-4612-4380-9},
+	shorttitle = {Bootstrap {Methods}},
+	url = {https://doi.org/10.1007/978-1-4612-4380-9_41},
+	abstract = {We discuss the following problem given a random sample X = (X 1, X 2,…, X n) from an unknown probability distribution F, estimate the sampling distribution of some prespecified random variable R(X, F), on the basis of the observed data x. (Standard jackknife theory gives an approximate mean and variance in the case R(X, F) = θ(F{\textasciicircum})−θ(F)θ(F{\textasciicircum})−θ(F){\textbackslash}theta {\textbackslash}left( \{{\textbackslash}hat F\} {\textbackslash}right) - {\textbackslash}theta {\textbackslash}left( F {\textbackslash}right), θ some parameter of interest.) A general method, called the “bootstrap”, is introduced, and shown to work satisfactorily on a variety of estimation problems. The jackknife is shown to be a linear approximation method for the bootstrap. The exposition proceeds by a series of examples: variance of the sample median, error rates in a linear discriminant analysis, ratio estimation, estimating regression parameters, etc.},
+	language = {en},
+	urldate = {2021-07-04},
+	booktitle = {Breakthroughs in {Statistics}: {Methodology} and {Distribution}},
+	publisher = {Springer},
+	author = {Efron, Bradley},
+	editor = {Kotz, Samuel and Johnson, Norman L.},
+	year = {1992},
+	doi = {10.1007/978-1-4612-4380-9_41},
+	keywords = {Bootstrap Distribution, Bootstrap Method, Bootstrap Replication, Linear Discriminant Analysis, Sample Median},
+	pages = {569--593},
+}
+
+@article{mcintosh_jackknife_2016,
+	title = {The {Jackknife} estimation method},
+	journal = {arXiv preprint arXiv:1606.00497},
+	author = {McIntosh, Avery},
+	year = {2016},
+}
+
 @article{dillon_tensorflow_2017,
 	title = {Tensorflow distributions},
 	journal = {arXiv preprint arXiv:1711.10604},
